services added , middlewares add, has almost completed sign up login

--- a/views/user/error.ejs
+++ b/views/user/error.ejs
@@ -1,5 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
 
-  <!-- <%-include('../partials/user/header')%> -->
+   <%-include("../partials/user/header")%>
+
+  
 <style>
     * {
       margin: 0;
@@ -61,5 +71,7 @@
     <a href="/">Back to home page</a>
   </div>
 
-
-  <!-- <%-include('../partials/user/footer')%> -->
+  <%-include("../partials/user/footer")%>
+  
+</body>
+</html>
