--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -61,11 +61,19 @@
         <i class="bi bi-three-dots-vertical"></i>
       </button>
       <ul class="dropdown-menu dropdown-menu-end">
-        <li><a class="dropdown-item" href="#"><i class="bi bi-power me-2"></i>Logout</a></li>
-        <li><a class="dropdown-item" href="#"><i class="bi bi-person me-2"></i>Profile</a></li>
-        <li><a class="dropdown-item" href="#"><i class="bi bi-heart me-2"></i>Wishlist</a></li>
-        <li><a class="dropdown-item" href="#"><i class="bi bi-cart me-2"></i>Cart</a></li>
-      </ul>
+  <% if (user) { %>
+    <li><span class="dropdown-item-text fw-bold">Hi, <%= user.name %></span></li>
+    <li><a class="dropdown-item" href="#"><i class="bi bi-person me-2"></i>Profile</a></li>
+    <li><a class="dropdown-item" href="#"><i class="bi bi-heart me-2"></i>Wishlist</a></li>
+    <li><a class="dropdown-item" href="#"><i class="bi bi-cart me-2"></i>Cart</a></li>
+    <li><a class="dropdown-item text-danger" href="/logout"><i class="bi bi-box-arrow-right me-2"></i>Logout</a></li>
+  <% } else { %>
+    <li><a class="dropdown-item" href="/login"><i class="bi bi-box-arrow-in-right me-2"></i>Login</a></li>
+    <li><a class="dropdown-item" href="/signup"><i class="bi bi-pencil-square me-2"></i>Sign Up</a></li>
+  <% } %>
+</ul>
+
+
     </div>
 
     <!-- Search Bar (Desktop Only) -->
@@ -74,13 +82,18 @@
     </form>
 
     <!-- Desktop Icons -->
-    <div class="d-none d-lg-flex align-items-center gap-3 text-white fs-5">
-      <i class="bi bi-power"></i>
-      <i class="bi bi-person"></i>
-      <i class="bi bi-heart"></i>
-      <i class="bi bi-cart"></i>
-    </div>
-  </div>
+   <div class="d-none d-lg-flex align-items-center gap-3">
+  <% if (user) { %>
+    <span class="text-white">Hi, <%= user.name %></span>
+    <a href="/logout" class="btn btn-outline-light btn-sm">Logout</a>
+    <i class="bi bi-person text-white fs-5"></i>
+    <i class="bi bi-heart text-white fs-5"></i>
+    <i class="bi bi-cart text-white fs-5"></i>
+  <% } else { %>
+    <a href="/login" class="btn btn-outline-light btn-sm">Login</a>
+    <a href="/signup" class="btn btn-warning btn-sm">Sign Up</a>
+  <% } %>
+</div>
 </nav>
 
 <!-- Bottom Navbar -->
