--- a/views/user/resetPassword.ejs
+++ b/views/user/resetPassword.ejs
@@ -57,6 +57,12 @@
       font-weight: bold;
       margin-top: 20px;
     }
+    .error-message{
+      color: rgb(241, 15, 15);
+      font-size: 0.75rem;
+      display: none;
+
+    }
 
     .logo {
       width: 40px;
@@ -82,7 +88,8 @@
     <form id="resetPasswordForm" class="mt-4">
       <div class="mb-3 text-start">
         <label>New Password:</label>
-        <input type="password" id="password" name="password" class="form-control" required />
+        <input type="password" id="password" name="password" class="form-control"  />
+        <div id="error1" class="error-message" ></div>
       </div>
       <div class="mb-3 text-start">
         <label>Confirm Password:</label>
@@ -94,7 +101,7 @@
 
   <script>
     const form = document.getElementById("resetPasswordForm");
-    
+     const error1 = document.getElementById("error1");
 
     form.addEventListener("submit", async function (e) {
       e.preventDefault();
@@ -102,11 +109,22 @@
      const password = document.getElementById('password').value;
 const confirmPassword = document.getElementById('confirmPassword').value;
 
-      
+       const passPattern = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@#$%^&+=!]).{8,}$/;
+      if(!passPattern.test(password)){
+        error1.style.display = "block";
+      error1.innerHTML = "Password must be 8+ chars, with uppercase, lowercase, digit, and symbol.";
+      return ;
+      }
 
       if (password !== confirmPassword) {
-        return Swal.fire("Mismatch", "Passwords do not match", "warning");
+         error1.style.display = "block";
+      error1.innerHTML = "Passwords do not match";
+      return;
+        
+      }else{
+        error1.style.display = "none";
       }
+     
 
       try {
         const res = await fetch(`/reset-password`, {
