--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -63,7 +63,7 @@
       <ul class="dropdown-menu dropdown-menu-end">
   <% if (user) { %>
     <li><span class="dropdown-item-text fw-bold">Hi, <%= user.name %></span></li>
-    <li><a class="dropdown-item" href="#"><i class="bi bi-person me-2"></i>Profile</a></li>
+    <li><a class="dropdown-item" href="/profile"><i class="bi bi-person me-2"></i>Profile</a></li>
     <li><a class="dropdown-item" href="#"><i class="bi bi-heart me-2"></i>Wishlist</a></li>
     <li><a class="dropdown-item" href="#"><i class="bi bi-cart me-2"></i>Cart</a></li>
     <li><a class="dropdown-item text-danger" href="/logout"><i class="bi bi-box-arrow-right me-2"></i>Logout</a></li>
@@ -86,7 +86,7 @@
   <% if (user) { %>
     <span class="text-white">Hi, <%= user.name %></span>
     <a href="/logout" class="btn btn-outline-light btn-sm">Logout</a>
-    <i class="bi bi-person text-white fs-5"></i>
+    <a href="/profile"  class="bi bi-person text-white fs-5"></a>
     <i class="bi bi-heart text-white fs-5"></i>
     <i class="bi bi-cart text-white fs-5"></i>
   <% } else { %>
