--- a/views/user/signUp.ejs
+++ b/views/user/signUp.ejs
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hammer Collection - Sign Up</title>
+   <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.22.0/dist/sweetalert2.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <style>
     body {
       background-color: #f5f5f5;
@@ -272,7 +274,12 @@ document.addEventListener('DOMContentLoaded', function () {
         if(response.ok){
           window.location.href = result.redirectUrl
         }else{
-          alert(result.message)
+        Swal.fire({
+        icon: "error",
+        title: "signUp Error",
+        text: result.message || "signUp failed"
+      });
+          
         }
 
       }catch(err){
