--- a/views/partials/user/sideBar.ejs
+++ b/views/partials/user/sideBar.ejs
@@ -1,3 +1,13 @@
+   <style>
+    a {
+      text-decoration: none;
+      color: white;
+    }
+  
+   </style>
+
+
+
    <div class="col-12 col-md-3 p-4"
            style="background-color: rgb(27 57 84); color: white; min-height: 100vh;
                   border-top-right-radius: 40px; border-bottom-right-radius: 40px;">
@@ -9,7 +19,7 @@
         <ul class="list-unstyled ps-3">
           <a href="/profile"><li class="mb-3">My Profile</li></a>
           
-      <a href="/profile/addressBook">    <li class="mb-3">Address Book</li></a>
+      <a href="/profile/addressBook" >    <li class="mb-3">Address Book</li></a>
           <li class="mb-3">My Orders</li>
           <li class="mb-3">My Wishlist</li>
           <li class="mb-3">Wallet</li>
