--- a/views/user/userProfile.ejs
+++ b/views/user/userProfile.ejs
@@ -27,7 +27,7 @@
 
     <div class="text-center position-relative mb-4">
       <i class="bi bi-person-circle" style="font-size: 70px; color: #333;"></i>
-     <a href='/profile/edit/<%= user._id %>';  class="btn btn-sm btn-outline-secondary position-absolute end-0 top-0">
+     <a href='/profile/edit';  class="btn btn-sm btn-outline-secondary position-absolute end-0 top-0">
 
         <i class="bi bi-pencil-square"></i> Edit Profile
       </a>
