--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -9,6 +9,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 <style>
+  a {
+      text-decoration: none;
+      color: white;
+    }
         img.rounded-circle {
       width: 40px;
       height: 40px;
@@ -88,7 +92,7 @@
     <a href="/logout" class="btn btn-outline-light btn-sm">Logout</a>
     <a href="/profile"  class="bi bi-person text-white fs-5"></a>
     <i class="bi bi-heart text-white fs-5"></i>
-    <i class="bi bi-cart text-white fs-5"></i>
+    <a href="/cart"  class="bi bi-cart text-white fs-5"></a>
   <% } else { %>
     <a href="/login" class="btn btn-outline-light btn-sm">Login</a>
     <a href="/signup" class="btn btn-warning btn-sm">Sign Up</a>
