--- a/views/user/shoppingPage.ejs
+++ b/views/user/shoppingPage.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Grid - Bootstrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <style>
         .background-image {
             background-color: rgba(41, 102, 196, 0.8);
@@ -414,11 +416,13 @@
 
     const html = `
       <div class="col-md-6 col-lg-3">
-        <a href="/product/${product._id}" class="text-decoration-none text-dark">
+        
         <div class="card h-100 card-hover">
           <div class="position-relative">
             <div class="product-image">
+              <a href="/product/${product._id}" class="text-decoration-none text-dark">
               <img src="${product.productImage[0]}" alt="${product.productName}" class="img-fluid">
+                </a>
             </div>
             <button onclick="toggleWishlist('${product._id}')" class="wishlist-btn wishlist-heart">
               <svg width="20" height="20" fill="currentColor" viewBox="0 0 20 20">
@@ -441,11 +445,11 @@
             </div>
             <div class="d-flex gap-2">
               <button onclick="buyNow('${product._id}')" class="buyNow btn flex-fill">Buy Now</button>
-              <button onclick="addToCart('${product._id}')" class="btn btn-dark flex-fill">Add to Cart</button>
+              <button onclick="addToCart('${product._id}',${product.salePrice})" class="btn btn-dark flex-fill">Add to Cart</button>
             </div>
           </div>
         </div>
-         </a>
+       
       </div>
     `;
 
@@ -559,6 +563,56 @@ if (selectedCategoryIds.length > 0) {
       }
     });
 }
+
+
+async function addToCart(id,price) {
+
+  try {
+     
+    const res = await fetch('/cart/add',{
+      method:"POST",
+      headers:{'content-type':'application/json'},
+      body:JSON.stringify({
+        id,
+        price
+
+      })
+    })
+
+    const data = await res.json();
+
+    if (data.success) {
+     Swal.fire({
+        toast: true,
+        position: 'top-end',
+        icon: 'success',
+        title: 'Added to cart!',
+        showConfirmButton: false,
+        timer: 1500,
+        timerProgressBar: true
+      });
+
+    } else {
+      Swal.fire({
+       toast: true,
+       position: 'top-end',
+       icon: 'error',
+       title: data.message ||'Failed to add to cart:',
+       showConfirmButton: false,
+       timer: 1500,
+       timerProgressBar: true
+      });
+
+    }
+  } catch (error) {
+    console.log('ff',error)
+    
+  }
+
+
+  
+}
+
 
 
 
