--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -69,7 +69,7 @@
     <li><span class="dropdown-item-text fw-bold">Hi, <%= user.name %></span></li>
     <li><a class="dropdown-item" href="/profile"><i class="bi bi-person me-2"></i>Profile</a></li>
     <li><a class="dropdown-item" href="#"><i class="bi bi-heart me-2"></i>Wishlist</a></li>
-    <li><a class="dropdown-item" href="#"><i class="bi bi-cart me-2"></i>Cart</a></li>
+    <li><a class="dropdown-item" href="/cart"><i class="bi bi-cart me-2"></i>Cart</a></li>
     <li><a class="dropdown-item text-danger" href="/logout"><i class="bi bi-box-arrow-right me-2"></i>Logout</a></li>
   <% } else { %>
     <li><a class="dropdown-item" href="/login"><i class="bi bi-box-arrow-in-right me-2"></i>Login</a></li>
