--- a/views/partials/user/sideBar.ejs
+++ b/views/partials/user/sideBar.ejs
@@ -12,7 +12,15 @@
            style="background-color: rgb(27 57 84); color: white; min-height: 100vh;
                   border-top-right-radius: 40px; border-bottom-right-radius: 40px;">
         <div class="text-center mb-4">
-          <i class="bi bi-person-circle" style="font-size: 60px;"></i>
+
+          <div class="mx-auto" style="width: 100px; height:100px; border-radius: 50%; overflow: hidden;">
+            <img 
+                 src="/uploads/img-1752041158086-9399406.jpg" 
+                   alt="Profile Image" 
+                 style="width: 100%; height: 100%; object-fit: cover;">
+              </div>
+
+          <!-- <i class="bi bi-person-circle" style="font-size: 60px;"></i> -->
           <h5 class="mt-2">Customer Name</h5>
         </div>
 
@@ -22,6 +30,7 @@
       <a href="/profile/addressBook" >    <li class="mb-3">Address Book</li></a>
           <li class="mb-3">My Orders</li>
           <li class="mb-3">My Wishlist</li>
+          <a href="/cart" class="mb-3">Cart</a>
           <li class="mb-3">Wallet</li>
           <li class="mb-3">Coupons</li>
         </ul>
